<resources>
    <string name="app_name">Pocket Porter</string>
    <string name="API_KEY" translatable="false">****************************************</string>

    <string name="continue_with_phone">Continue with Phone number</string>
    <string name="enter_your_phone">Enter your phone number</string>
    <string name="continues">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="send_package">Send package</string>
    <string name="acount">Account</string>
    <string name="orders">Orders</string>
    <string name="wallet">Wallet</string>
    <string name="home">Home</string>
    <string name="droppack">Where is your  <b>Drop?</b></string>
    <string name="confirm_location">Confirm Location</string>
    <string name="save_amp_proceed"><![CDATA[Save & Proceed]]></string>
    <string name="proceed">Proceed</string>
    <string name="searching">Searching for<b>driver...</b></string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="all_orders">All orders</string>
    <string name="my_wallet">My Wallet</string>
    <string name="logout">LOGOUT</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="total">Total </string>
    <string name="procetcradit">PocketPorter credit (</string>
    <string name="item_total">item total </string>
    <string name="selectvehiclefirst">Select Vehicle first</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="save">Save </string>
    <string name="sorry_couponnotapplied">Sorry this coupon code is not applied</string>
    <string name="canceltrip">Cancel Trip</string>
    <string name="are_you_cancel_trip">Are you sure you want to cancel trip?.</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">Yes</string>
    <string name="bookingwillget">Booking will get cancelled if not allocated in: </string>
    <string name="location_not_avalible">Location not Available</string>
    <string name="totalamount">Total Amount : </string>
    <string name="seemore">See More</string>
    <string name="not_available">Not Available</string>
    <string name="youget">You will get</string>
    <string name="when_your_frined"><![CDATA[ when your friend sign up and complete first trip.\n Your Friend get <b>]]></string>
    <string name="mainlusat">Mail us at </string>
    <string name="balance">Balance </string>
    <string name="pickup_contact">Pickup contact</string>
    <string name="goods_type">Goods type</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="booking_done">Booking Done</string>
    <string name="rider_name">Rider Name</string>
    <string name="pay_on_delivery">Pay on Delivery</string>
    <string name="self_pickup">Self Pickup</string>
    <string name="sorry_we_do_not_a">Sorry! We do not allow pickup in the area you have selected</string>
    <string name="select_your_location">SELECT YOUR LOCATION</string>
    <string name="review_add">Review/Add</string>
    <string name="add_new_stop">Add New Stop</string>
    <string name="instruction">Instruction</string>
    <string name="express_delivery">Express Delivery</string>
    <string name="delivery_within_15min_3_00">Delivery within 15min -$3.00</string>
    <string name="payment_details">Payment Details</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="express_charge">Express Charge</string>
    <string name="tax_and_service_charge">Tax and service charge</string>
    <string name="package_status">Package Status</string>
    <string name="pickup_address">Pickup address</string>
    <string name="drop_address">Drop address</string>
    <string name="package_total">Package Total</string>
    <string name="package_details">Package Details</string>
    <string name="payment_type">Payment type</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="select_goods">Select Goods</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="pocketporter">PocketPorter</string>
    <string name="add_wallet_amount">Add Wallet Amount</string>
    <string name="driver_will_call_this_contact_at_drop_location">Driver will call this contact at Drop location</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="my_self">My Self</string>
    <string name="view_details">View Details</string>
    <string name="invite_your_friend">Invite your friend</string>
    <string name="place_a_first_trip">Place a first trip</string>
    <string name="enjoy_your_earning">Enjoy your earning</string>
    <string name="sign_up_amp_refer"><![CDATA[Sign up & Refer]]></string>
    <string name="share_referral_code">Share referral code</string>
    <string name="share">Share</string>
    <string name="call_us">Call Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="porter_credit">Porter credit</string>
    <string name="add_payment">Add payment</string>
    <string name="history">History</string>
    <string name="wallet_history_not_found">Wallet history not found</string>
    <string name="apply">Apply</string>
    <string name="change">Change</string>
    <string name="language">Language</string>
    <!-- TODO: Remove or change this placeholder text -->



    <string name="book_porter_for">Book Instant Shipment for</string>
    <string name="moving_from">Moving From</string>
    <string name="moving_to">Moving To</string>
    <string name="has_service_lift">Has Service Lift?</string>

    <string name="get_quotes_on_your_shipment">Get quotes on your shipment</string>
    <string name="courier_service">Courier Service</string>
    <string name="estimatecost">Estimate Cost</string>
    <string name="logistic">Logistic</string>
    <string name="payment_method">Payment Method</string>
    <string name="parcel">Parcel</string>
    <string name="parcel_details">Parcel Details</string>
    <string name="allparcelorders">All Parcel Orders</string>
    <string name="alllogisticorders">All Logistic Orders</string>
    <string name="packers_amp_movers"><![CDATA[Packers & Movers]]></string>
    <string name="inventories">What do you need Shift for?</string>
    <string name="distance">Distance</string>
    <string name="here_s_what_">Your move is completely hands off, you can just sit back and let us do the rest!</string>
    <string name="floor_no">Floor No.</string>
    <string name="local">Local</string>
    <string name="pincode">Pin/Postal</string>
    <string name="single_shipments">Single Shipments</string>
    <string name="one_shipment_for_one_delivery">One shipment for one delivery</string>
    <string name="multi_shipments">Multi Shipments</string>
    <string name="multiple_shipments_for_one_delivery">Multiple shipments for one delivery</string>
    <string name="currant_address">Current Address</string>
    <string name="when_are_you_plan">When are you planning to move?</string>
    <string name="enter_location_details">Enter Location Details</string>
    <string name="select_date">Select a date window for your move</string>

    <string name="application_json">application/json</string>
    <string name="addressline2">addressline2</string>
    <string name="amount">amount</string>
    <string name="detail">detail</string>
    <string name="estimated_delivery_in">Estimated delivery in 1-2 days</string>
    <string name="express">Express</string>
    <string name="estimated_shipping_cost">Estimated Shipping Cost</string>


</resources>
