<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:background="@drawable/rounded_top"
    android:gravity="center"

    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/add_wallet_amount"
            android:textColor="@color/apptextcolor"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="start"
            android:background="@drawable/edittext_box"
            android:hint="@string/enter_amount"
            android:inputType="number"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:padding="15dp"
            android:textSize="14dp" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:layout_gravity="start"
        android:text="@string/select_payment_method"
        android:textColor="@color/colorgrey3"
        android:textSize="12dp"
         />

    <LinearLayout
        android:id="@+id/lvl_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </LinearLayout>

</LinearLayout>
