<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_top"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:background="@drawable/circlebg"
                    android:padding="10dp"
                    android:src="@drawable/ic_user" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"

                    android:drawablePadding="5dp"
                    android:drawableTint="@color/black"
                    android:gravity="center|start"
                    android:text="@string/edit_profile"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/edittext_box"
                    android:drawablePadding="5dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/edittext_box"
                    android:drawablePadding="5dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <TextView
                    android:id="@+id/ed_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/edittext_box"
                    android:drawablePadding="5dp"
                    android:editable="false"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/edittext_box"
                    android:drawablePadding="5dp"
                    android:hint="@string/password"
                    android:padding="10dp"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_alignParentBottom="true"

                android:layout_marginStart="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/rounded_button"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/save_amp_proceed"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>

