<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".fregment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                style="@style/Font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/my_wallet"
                android:textColor="@color/black"
                android:textSize="18dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/porter_credit"
                    android:textColor="@color/apptextcolor"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/txt_wallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Balance $20"

                    android:textColor="@color/black"
                    android:textSize="14dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/addpayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_button"
                android:padding="7dp"
                android:text="@string/add_payment"
                android:textColor="@color/white"
                android:textSize="12dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/colorgrey0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/history"
            android:gravity="start"
            android:textColor="@color/apptextcolor"
            android:textSize="12dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleview_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp" />

        <LinearLayout
            android:id="@+id/lvl_notfound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notfound" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/wallet_history_not_found"
                android:textSize="16dp" />
        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>