<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_top"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/book_porter_for"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/lvl_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/roundedselectbox"
            android:backgroundTint="#E6F2FE"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_singlepin_inside" />

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:padding="2dp"
                    android:text="@string/single_shipments"
                    android:textColor="@color/black"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/one_shipment_for_one_delivery"
                    android:textSize="12dp" />
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_right" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lvl_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/roundedselectbox"
            android:backgroundTint="#D7F4E0"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_multipin_inside" />


            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2dp"
                    android:textStyle="bold"
                    android:text="@string/multi_shipments"
                    android:textColor="@color/black"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:padding="2dp"
                    android:text="@string/multiple_shipments_for_one_delivery"
                    android:textSize="12dp" />

            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"

                android:src="@drawable/ic_right" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>

